--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "repository": {},
   "dependencies": {
-    "babel-brunch": "~6.0.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "brunch": "~2.3",
-    "clean-css-brunch": "~1.8.0",
-    "css-brunch": "~1.7.0",
-    "javascript-brunch": "~1.8.0",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1",
-    "uglify-js-brunch": "~1.7.0"
+    "redux": "^3.3.1"
   },
   "devDependencies": {
-    "redux-devtools": "^3.1.1"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "redux-devtools": "^3.1.1",
+    "webpack": "^1.12.13"
   }
 }
