--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 web:
     build: .
     volumes:
-        - .:/app
+        - .:/code
     links:
         - db
     ports:
         - "40000:4000"
+
 db:
     image: mysql:5.6
     environment:
