--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "repository": {},
   "dependencies": {
+    "immutable": "^3.7.6",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^0.14.7",
