--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "muicss": "^0.4.6",
     "redux-devtools": "^3.1.1",
     "webpack": "^1.12.13"
   }
