--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "shortid": "^2.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
